Feature/post media upload (#13)
* Add media attachments for posts with S3 integration

- Implemented backend support for uploading and retrieving media files using AWS S3.
- Added `MediaDTO` and updated `PostDTO` to include media details.
- Created `S3Service` for generating presigned URLs for file uploads and downloads.
- Updated `PostController` to handle media in post creation and editing.
- Integrated media display in `SupporterView` and `MissionaryView` on the frontend.
- Enhanced post creation to support media attachments.

* Add post deletion functionality with S3 file cleanup

- Implemented backend support for deleting posts, including verifying user authorization and removing associated media files from S3.
- Updated `PostController` with `@DeleteMapping` endpoint for post deletion.
- Enhanced `S3Service` to include file deletion functionality.
- Added frontend support for post deletion with confirmation prompt and UI updates.

* Enhance post editing with media update support

- Refactored `validatePostUpdate` to validate `PostDTO` instead of entire `Post`.
- Added `updateMedia` method to handle media additions and deletions during post edits, including S3 cleanup.
- Updated frontend to manage existing and newly attached media separately during edits.
- Enhanced UI for editing posts to support media management.

* Refactor tests to replace `isLiked` with `getLiked` in `CommentControllerTest` and `PostControllerTest`.